# pyoverland

./: .gitignore  LICENSE  README.md  atos.py  authlib.py  bottle-0.12.py  bottle_sqlite.py  capurl.py  main.py  pyproject.toml  shell.nix  weatherapi.py  weatherapi_test.py
deploy/: prodstart.sh  pyoverlander.service  setup.sh
static/Skeleton-2.0.4/: index.html
static/jawg/style/: samples.css
views/: history.tpl  jawg.tpl  now.tpl
