[project]
name = "pyoverlander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bottle>=0.13.2",
    "httpx>=0.27.2",
    "hypothesis>=6.115.3",
    "mypy>=1.12.1",
    "pydantic>=2.9.2",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    "rich>=13.9.2",
    "yapf>=0.40.2",
]
